force-app/main/default/objects/ffr__ReportingPrompt__c/ffr__ReportingPrompt__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingprompt</customHelpPage>
    <label>Reporting Prompt</label>
    <nameField>
        <label>Reporting Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Prompts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>