force-app/main/default/objects/ffr__ReportingPrompt__c/fields/ffr__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__DefaultValue__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>