force-app/main/default/objects/ffr__ReportingPrompt__c/fields/ffr__PicklistValues__c.field-meta.xml
<CustomField>
    <fullName>ffr__PicklistValues__c</fullName>
    <label>Picklist Values</label>
    <type>TextArea</type>
</CustomField>