force-app/main/default/objects/ffr__ReportingPrompt__c/fields/ffr__ReportingDefinition__c.field-meta.xml
<CustomField>
    <fullName>ffr__ReportingDefinition__c</fullName>
    <label>Reporting Definition</label>
    <referenceTo>ffr__ReportingDefinition__c</referenceTo>
    <relationshipLabel>Reporting Prompts</relationshipLabel>
    <relationshipName>ReportingPrompts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>