force-app/main/default/objects/ffr__ReportingPrompt__c/fields/ffr__Required__c.field-meta.xml
<CustomField>
    <fullName>ffr__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>