force-app/main/default/objects/ffr__ReportingPrompt__c/fields/ffr__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>ffr__SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>